syntax = "proto3";

package transceiver;

import "first-protobuf/transmission_object.proto";

message EchoRequest {
  transmission_object.TransmissionObject from_client = 1;
}

message EchoResponse {
  transmission_object.TransmissionObject from_server = 1;
}

service Transceiver {
  rpc Echo (EchoRequest) returns (EchoResponse);
}